NetBSD Problem Report #50798

From www@NetBSD.org  Fri Feb 12 17:02:21 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B364C7ABDE
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Feb 2016 17:02:21 +0000 (UTC)
Message-Id: <20160212170220.D3D5C7ACB9@mollari.NetBSD.org>
Date: Fri, 12 Feb 2016 17:02:20 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/powerpc/oea/ofw_consinit.c:123: botched va_* handling ?
X-Send-Pr-Version: www-1.0

>Number:         50798
>Category:       port-powerpc
>Synopsis:       src/sys/arch/powerpc/oea/ofw_consinit.c:123: botched va_* handling ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-powerpc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 12 17:05:00 +0000 2016
>Closed-Date:    Sun Feb 14 19:03:44 +0000 2016
>Last-Modified:  Sun Feb 14 19:03:44 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160212
>Organization:
>Environment:
>Description:

$ fgrep va src/sys/arch/powerpc/oea/ofw_consinit.c
#include <dev/wscons/wsksymvar.h>
#include <machine/z8530var.h>
#include <macppc/dev/adbvar.h>
#include <dev/usb/ukbdvar.h>
#include <dev/ic/pckbcvar.h>
	va_list va;
	va_start(va, blah);
	len = vsnprintf(buf, sizeof(buf), blah, va);
	 * available. Try attaching as ADB.
$ 


Suggest add missing call to va_end.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50798 CVS commit: src/sys/arch/powerpc/oea
Date: Sun, 14 Feb 2016 18:12:31 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Feb 14 18:12:31 UTC 2016

 Modified Files:
 	src/sys/arch/powerpc/oea: ofw_consinit.c

 Log Message:
 Add missing va_end, from David Binderman in PR 50798.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/sys/arch/powerpc/oea/ofw_consinit.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Feb 2016 19:03:44 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.