Add missing va_end, from David Binderman in PR 50798.